# jqr

./: .gitignore  Cargo.toml  LICENSE  README.md  README_zh.md  verify.sh
src/: cli.rs  error.rs  explain.rs  lib.rs  main.rs
src/config/: agent.rs  mod.rs
src/filter/: mod.rs
src/input/: mod.rs
src/interactive/: highlight.rs  mod.rs  pipeline.rs  render.rs  session.rs  terminal.rs
src/mcp/: mod.rs
src/output/: envelope.rs  format.rs  mod.rs  token.rs  truncate.rs
src/repair/: mod.rs
src/schema/: mod.rs
test_files/: demo.csv  demo.json  demo.toml  demo.yaml
tests/: accuracy_gates.rs  cli_pipeline.rs  functional_verification.rs
